Multithreading using double buffer for longStore w RAM usage at 79 percent

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+;-Ilibdeps/nucleo_l432kc/STM32duino\ FreeRTOS
 [env:nucleo_f767zi]
 platform = ststm32
 board = nucleo_f767zi
 framework = arduino
+build_flags = 
+	-Ilibdeps/nucleo_f767zi/STM32duino\ FreeRTOS
 lib_deps = 
 	stm32duino/STM32Ethernet@^1.4.0
 	stm32duino/STM32duino LwIP@^2.1.3
 	eloquentarduino/EloquentTinyML@^0.0.3
+	stm32duino/STM32duino FreeRTOS@^10.3.2
