--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	stm32duino/STM32Ethernet@^1.4.0
 	stm32duino/STM32duino LwIP@^2.1.3
 	eloquentarduino/EloquentTinyML@^0.0.3
+	stm32duino/STM32duino FreeRTOS@^10.3.2
